ensure modify the renderer that is used for printing

instead of altering the renderer of the view we do want to
print

BUG: 465526
BUG: 488605
BUG: 487081
BUG: 483550